# doc-extractor

./: .gitignore  CLAUDE.md  README.md  SKILL.md  fix_snapshot_timeout.sh  main.py  pyproject.toml
.ai/: current-plan.md
.github/workflows/: sync-skill.yml
docs/: 001-plan-autoresearch.md  PRD.md  adding-new-document-type.md  comparison_report.md  research.md  roadmap.md  security_review.md
evals/: _diff.py  _report.py  snapshot.py  usage.md
experiments/datalab_hybrid/: parse_datalab.py
scripts/: _cli.py  _output.py  cleanup_files.py  extract_text.py  gemini.py  ingestion.py  parse_vision.py  prompts.py  schemas.py  summary.py
scripts/schemas/: __init__.py  _coa.py  _enums.py  _envelope.py  _generic.py  _invoice.py  _label.py  _label_order_ack.py  _label_proof.py  _packaging_spec.py  _payment_proof.py  _product_spec.py  _quote.py  _shared.py
tests/: conftest.py  test_parse_vision.py  test_schemas.py
