[project]
name = "doc-extractor"
version = "0.1.0"
description = "Extract structured JSON from supply chain documents using Google Gemini models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "liteparse>=1.2.0",
    "pypdf>=6.9.2",
    "requests>=2.33.1",
    "markitdown>=0.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "rapidfuzz>=3.14.5",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
